--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -4,7 +4,7 @@ main:
   - name: "The News"
     url: "/news/"
     weight: 1
-  - name: "Awards"
+  - name: "Award"
     url: "/awards/"
     weight: 2
   - name: "EASST Board"
